Nivelamento de Habilidades

--- a/indexENUS.html
+++ b/indexENUS.html
@@ -101,13 +101,13 @@
               <img src="imagens/HTMLLogo.png" class="tecnologiaLogo" />
               <div class="containerTecnologia">
                 <h2>HTML</h2>
-                <p>Intermediate knowledge</p>
+                <p>Novice knowledge</p>
               </div>
             </li>
             <li class="tecnologiaItem">
               <div class="containerTecnologia">
                 <h2>CSS</h2>
-                <p>Intermediate knowledge</p>
+                <p>Novice knowledge</p>
               </div>
               <img src="imagens/CSSLogo.png" class="tecnologiaLogo" />
             </li>
